divided into sub program py files

--- a/kuka-krc-configuration.json
+++ b/kuka-krc-configuration.json
@@ -36,7 +36,13 @@
         ]
     ],
     "comments": {
-        "lineComment": "!"
+        "lineComment": ";"
+    },
+    "folding": {
+        "markers": {
+            "end": "^\\\\s*;ENDFOLD",
+            "start": "^\\\\s*;FOLD"
+        }
     },
     "surroundingPairs": [
         [
