Wrong file extension on universal robots

--- a/package.json
+++ b/package.json
@@ -164,7 +164,7 @@
             ],
             "configuration": "./cnfg.universal_robots.json",
             "extensions": [
-                ".pdl"
+                ".script"
             ],
             "id": "universal_robots"
         }
