--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "Industrial-Robots",
   "displayName": "Industrial Robots",
-  "description": "Robot Programming Syntax Highlighting for Industrial Robots. Supported languages include: ABB, Fanuc, KUKA, Kawasaki, Yaskawa/Motoman, Stäubli, Universal Robots, ...",
+  "description": "Robot Programming Syntax Highlighting for Industrial Robots. Supported languages include: ABB RAPID, Fanuc LS, KUKA KRC, Kawasaki PRG, Yaskawa/Motoman INFORM, Stäubli VAL3, Universal Robots Script, ...",
   "icon": "icon.png",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "publisher": "RoboDK",
   "engines": {
     "vscode": "^1.5.0"
