--- a/package.json
+++ b/package.json
@@ -199,7 +199,7 @@
             ],
             "configuration": "./cnfg.universal_robots.json",
             "extensions": [
-                ".pdl"
+                ".script"
             ],
             "id": "universal_robots"
         }
